Current Prior Work Sec.  TODO: Job Sched Subsec.

--- a/bib/patki.bib
+++ b/bib/patki.bib
@@ -5054,3 +5054,13 @@ TITLE = {{Demand Response Opportunities and Enabling Technologies for Data Cente
 BOOKTITLE = {"PG\&E/SDG\&E/CEC/LBNL"},
 YEAR = 2012
 }
+
+@INPROCEEDINGS{SaroodSC11,
+        author = "Osman Sarood and Laxmikant V.~Kal{\'e}",
+        title = "A `Cool' Load Balancer for Parallel Applications",
+        booktitle = "Proceedings of the 2011 ACM/IEEE conference on Supercomputing",
+        month = "November",
+        year = "2011",
+        address = "Seattle, WA",
+}
+
