--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -16,68 +16,22 @@ Thermal and cooling metrics are becoming important in HPC resource management. R
 job-placement-centric. These techniques either aim to place incoming computationally intensive jobs in a thermal-aware manner on servers with
 lower temperatures or attempt to migrate or load-balance jobs from high-temperature servers to servers with lower temperatures.
 
-Kaushik et. al \cite{kaushik_t*:_2012} proposed \emph{T*}, a system that is aware of server thermal profiles and reliability as well as data semantics (computation job rates, job sizes, etc). This system saves cooling energy costs by using thermal-aware job placements without trading off performance. This paper assumes that the given grid is a constant. However, it is expected that future grid infrastructures will evolve due to grid integration solutions \cite{he_architecture_2008}. This may make thermal management more challenging.
-
-Aikema et. al \cite{aikema_electrical_2011} explored the potential for HPC centers to adapt to dynamic electrical prices, to variation in carbon intensity within an electrical grid, and to availability of local renewables. Their simulations demonstrated that 10- 50 \% of electricty costs could potentially be saved. They also concluded that adapting to the variation in the electrical grid carbon intensity was difficult, and that adapting to local renewables could result in significantly higher cost savings. 
-
-Sarood et. al \cite{SaroodSC11} designed a runtime system that does temperature-aware load balancing in data centers using DVFS and task migration. They also discussed how hotspots could be avoided in data centers, and showed cooling costs can be reduced by up to 48\% with temperature-aware load balancing.
+Kaushik et. al \cite{kaushik_t*:_2012} proposed \emph{T*}, a system that is aware of server thermal profiles and reliability as well as data semantics (computation job rates, job sizes, etc). This system saves cooling energy costs by using thermal-aware job placements without trading off performance. This paper assumes that the given grid is a constant. However, it is expected that future grid infrastructures will evolve due to grid integration solutions \cite{he_architecture_2008}. This may make thermal management more challenging. Aikema et. al \cite{aikema_electrical_2011} explored the potential for HPC centers to adapt to dynamic electrical prices, to variation in carbon intensity within an electrical grid, and to availability of local renewables. Their simulations demonstrated that 10- 50 \% of electricty costs could potentially be saved. They also concluded that adapting to the variation in the electrical grid carbon intensity was difficult, and that adapting to local renewables could result in significantly higher cost savings. Sarood et. al \cite{SaroodSC11} designed a runtime system that does temperature-aware load balancing in data centers using DVFS and task migration. They also discussed how hotspots could be avoided in data centers, and showed cooling costs can be reduced by up to 48\% with temperature-aware load balancing.
 
 \subsection{Job Scheduling}
 The problem of scheduling jobs has been extensively studied. Most resource managers implement the First Come First Serve (FCFS) policy
 as a simple but fair strategy for scheduling jobs. However, FCFS suffers from low system utilization. A common optimization is backfilling
-\cite{lifka_anl/ibm_1995,mualem_utilization_2001,feitelson_parallel_2004}. Backfilling improves system utilization by scheduling jobs with small resource requests out of order on idle nodes.
+\cite{lifka_anl/ibm_1995,mualem_utilization_2001,feitelson_parallel_2004}. Backfilling improves system utilization by executing jobs with small resource requests out of order on idle nodes.
 
-In \cite{yang_integrating_2013} \cite{zhou_reducing_2013}, \textbf{job scheduling} as a DR strategy and
-\textbf{dynamic pricing} as a grid integration program have been used to
-propose \textbf{a power-aware job scheduling} approach to reduce
-\textbf{electricity costs} \textit{without degrading system utilization}. 
-The novelty of the proposed job scheduling
-mechanism is its ability to take \textit{the variation of 
-the price of electricity }into consideration as a means to make
-better decisions of the timing of scheduling jobs with diverse power
-profiles. Experiments on an IBM Blue Gene/P and a cluster system as
-well as a case study on Argonne's 48-rack IBM Blue Gene/Q system have
-demonstrated the effectiveness of this scheduling approach. Preliminary
-results show a \textbf{23{\%}} reduction in the cost of electricity for HPC systems.
+Power-aware resource management without degrading utilization has been proposed as a DR strategy to reduce electricity costs \cite{yang_integrating_2013,zhou_reducing_2013}. The novelty of the proposed job scheduling mechanism is its ability to take the variation in electricity price into consideration as a means to make better decisions about job start times. Experiments on an IBM Blue Gene/P and a cluster system as well as a case study on Argonne's 48-rack IBM Blue Gene/Q system have demonstrated the effectiveness of this scheduling approach. Preliminary results show a 23\% reduction in the cost of electricity for HPC systems.
 
-%Patki
-%This reference is not *power capping*, it is power-aware scheduling in data centers. 
 Fan et al. \cite{PowerAwareServer1} discussed power-aware job scheduling in the data center domain. 
-They discussed implementation of power capping with a \textbf{power monitoring system} based on a power estimation
-method or direct power sensing, and a \textbf{power throttling mechanism}. Power throttling generally works best when there is 
-a set of jobs with loose service level guarantees or low priority that can be
-forced to reduce consumption when the datacenter is approaching the power cap value. They suggested that power consumption 
-can be reduced simply by de-scheduling tasks or by using any available component-level power management knobs.
-
-Etinski et al. \cite{Etinski1,Etinski2,Etinski3,Etinski4} explored scheduling under a power budget in supercomputing and analyzed bounded slowdown of jobs. In their series of papers, they introduced three policies. Their first policy is based looks at current system utilization and uses DVFS during job launch time to meet a power bound. Their second policy meets a bounded slowdown condition without exceeding a job-level power budget. Their third policy improves upon the former by analyzing job wait times and adding a reservation condition. 
-
-A grid computing infrastructure with large amount of computations normally
-contains parallel machines (a supercomputer cluster) as main computational
-resources.  \cite{foster_anatomy_2001} [Fos01]
-Incoming jobs to Grid's local resources are scheduled by
-local scheduling system. Local scheduling system for parallel machines
-typically use batch queued space-sharing and its variants as scheduling
-policies. Most current local schedulers use backfilling strategies with FCFS
-queue-priority order as policy for parallel job scheduling.
+They discussed a power monitoring system that could use power capping (based on a power estimation method such as RAPL or direct power sensing) and a power throttling mechanism. Such as system works well when is a set of jobs with loose service level guarantees or low priority that can be
+forced to reduce consumption when the datacenter is approaching the power cap value. Etinski et al. \cite{Etinski1,Etinski2,Etinski3,Etinski4} explored scheduling under a power budget in supercomputing and analyzed bounded slowdown of jobs. In their series of papers, they introduced three policies. Their first policy is based looks at current system utilization and uses DVFS during job launch time to meet a power bound. Their second policy meets a bounded slowdown condition without exceeding a job-level power budget. Their third policy improves upon the former by analyzing job wait times and adding a reservation condition. 
 
 There are many use cases in a grid computing environment that require QoS
 guarantees in terms of guaranteed response time, including time-critical
-tasks that must meet a deadline, which would be impossible without a start
-time guarantee. Furthermore, providing a time guarantee enables the job to be
-coordinated with other activities, essential for co-allocation and workflow
-applications. Advance reservation is a guarantee for the availability of a
-certain amount of resources to users and applications at specific times in
-the future 
-\cite{foster_distributed_1999} [Fos99]. The advance reservation feature requires local scheduling
-systems to support a reservation capability beside a batch-queued policy for
-local and normal jobs. In load migration, we encounter the need to deliver
-resources at specific times in order to accept jobs from other HPC centers
-to respond to their demand enforced by the electricity grid. This requirement
-can be achieved by advance reservations 
-\cite{foster_distributed_1999}
-[Fos99]. Modern resource management
-and scheduling systems such as Sun Grid Engine, PBS, OpenPBS, Torque, Maui,
-and Moab support backfilling and advance reservation capabilities.
+tasks that must meet a deadline. Foster et. al \cite{foster_distributed_1999,foster_anatomy_2001} proposed \emph{advance reservations} to achieve time guarantees. Advance reservation is a guarantee for the availability of a certain amount of resources to users and applications at specific times in the future. The advance reservation feature requires scheduling systems to support reservation capabilities in addition to backfilling-based batch scheduling. Modern resource management systems such as Sun Grid Engine, PBS, OpenPBS, Torque, SLURM, Maui, and Moab support advance reservation capabilities.
 
 \subsection{Load Migration}
 Chiu et. al \cite{chiu_electric_2012} discussed a electrical grid balancing problem that was experienced in the Pacific Northwest. In order to match electricity supply and balance the electrical grid, they proposed low-cost geographic load migration. They also suggested that a symbiotic relationship between datacenters and electrical grid operators that leads to mutual cost benefits could work well.  Ganti et al. \cite{Ghatikar2012b} looked at two applied cases for distributed data centers. The results show that load migration is possible in both homogenous and heterogeneous systems. Their migration strategies were based on a manual process and can benefit from automation.
