app; quest; super; white

--- a/text/appendices.tex
+++ b/text/appendices.tex
@@ -75,51 +75,15 @@ top 10, 60{\%} of the top 50, and 30{\%} of the top 100 participated in the
 survey.
 
 
-\begin{table}[htbp]
-\begin{center}
-\caption{Participating organizations and their rank in the top 100.}
-\begin{tabular}{|p{59pt}|l|l|l|l|l|l|l|l|l|l|l|}
-\hline
-Organization&
-ORNL&
-LLNL&
-ANL&
-LANL&
-NERSC&
-Purdue&
-AF&
-NOAA&
-Intel&
-SDSC&
-Illinois \\
-\hline
-Rank&
-2&
-3&
-5&
-22&
-24&
-28&
-40&
-48&
-71&
-102&
- \\
-\hline
-\end{tabular}
-\label{tab4}
-\end{center}
-\end{table}
-
 The survey had a total of 29 questions, eight of the questions were skipped
 16 times by the 11 participants. This is only 5{\%} of the total questions
 answered by the eleven participants. The graph below shows the distribution
 of skipped questions.
 
 
-\begin{figure}
-\includegraphics[width=4.01in,height=2.01in]{figure2}
-\caption{Figure 2}
+\begin{figure}[htbp]
+\includegraphics[width=3.01in,height=2.01in]{figure2}
+\caption{Caption }
 \end{figure}
 
 
