--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -21,6 +21,15 @@ within the EE HPC WG. The sample is more representative of Top50 sized sites
 responded). Only 4 additional sites were sampled from the Top51-Top100 List
 and, of those, 2 responded (Intel and National Oceanic and Atmospheric Administration).
 
+%Patki: New Graph instead of Table 1
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[scale=0.4]{NewGraphs/Table1-Graph.pdf}
+\caption{Site Load and Variability}
+\label{figGraph1}
+\end{center}
+\end{figure}
+
 The total power load as well as the intra-hour fluctuation of these sites
 varied significantly (Figure \ref{figGraph1}). Total power load includes all computing systems plus 
 ancillary systems such as power delivery and cooling components.
@@ -35,73 +44,6 @@ fluctuations. The
 rest of the sites all reported less than 3MW intra-hour fluctuation. Most of the intra-hour variability
 was due to preventative maintenance (again, the power variation includes both computing and ancillary systems).
 
-%Patki: New Graph instead of Table 1
-\begin{figure}
-\begin{center}
-\includegraphics[scale=0.4]{NewGraphs/Table1-Graph.pdf}
-\caption{Site Load and Variability}
-\label{figGraph1}
-\end{center}
-\end{figure}
-
-%\begin{table}[htbp]
-%
-%\begin{center}
-%\caption{Caption Number 1}
-%\begin{tabular}{|p{65pt}|l|l|}
-%\hline
-%\textbf{Total Load}&
-%\textbf{Variability}&
-%\textbf{Frequency} \\
-%\hline
-%16-17MW&
-%5MW&
-%weekly \\
-%\hline
-%13-14MW&
-%8MW&
-%monthly \\
-%\hline
-%10-11MW&
-%Less than 3MW&
-%weekly \\
-%\hline
-%10-11MW&
-%7MW&
-%weekly \\
-%\hline
-%4-5MW&
-%Less than 3MW&
-%weekly \\
-%\hline
-%4-5MW&
-%4MW&
-%weekly \\
-%\hline
-%1-2MW&
-%Less than 3MW&
-%weekly \\
-%\hline
-%1-2MW&
-%140kW&
-%daily \\
-%\hline
-%1-2MW&
-%Less than 3MW&
-%yearly \\
-%\hline
-%1-2MW&
-%200kW or less&
-%daily \\
-%\hline
-%1-2MW&
-%Less than 3MW&
-%daily \\
-%\hline
-%\end{tabular}
-%\label{tab1}
-%\end{center}
-%\end{table}
 
 We asked if the supercomputer centers had talked to their electricity
 providers about programs and methods used to balance the grid supply and
@@ -110,12 +52,11 @@ has mostly been limited to programs (e.g., peak shed, dynamic pricing)
 and not methods (e.g., regulation, frequency response, congestion).
 
 \begin{table}[htbp]
-\begin{center}
-\caption{Caption Number 2}
-\begin{tabular}{|p{230pt}|l|}
+\caption{Caption Number 1}
+\begin{tabular}{|p{190pt}|l|}
 \hline
 \textbf{Discussions with Energy Providers}&
-{\%} Answered Yes \\
+{\%} Yes \\
 \hline
 \textbf{Demand-side programs}&
 ~ \\
@@ -143,7 +84,6 @@ Contributing to electrical grid storage&
 \hline
 \end{tabular}
 \label{tab2}
-\end{center}
 \end{table}
 
 Approximately half of the respondents are not currently interested in shedding
@@ -248,9 +188,9 @@ apparent with load migration.  It is rated as having a high impact by 36\% of th
 respondents, but only interesting to 10\% .  
 
 
-\begin{table}[htbp]
-\begin{center}
-\caption{Summary of aspects and quality levels}
+\begin{table*}[htbp]
+\centering
+\caption{HPC Strategies Responding to Electricity Provider Requests}
 \begin{tabular}{|p{2.5in}|p{0.75in}|p{0.75in}|p{0.75in}|} \hline
 
 \textbf{HPC strategies for responding to} &
@@ -273,6 +213,7 @@ Coarse grained power management &
 64 &
 46 &
 27 \\
+\hline
 
 Load migration &
 10 &
@@ -312,39 +253,6 @@ Use back-up resources (e.g., generators) &
 
 \end{tabular}
 \label{tab3}
-\end{center}
-
-\end{table}
+\end{table*}
 
 
-%\begin{table}[htbp]
-%
-%\begin{center}
-%\caption{Caption Number 3}
-%\begin{tabular}{|p{299pt}|}
-%\hline
-%\textbf{HPC strategies for responding to Energy Provider requests (listed from highest to lowest interest }$+$\textbf{ impact)} \\
-%\hline
-%Coarse grained power management \\
-%\hline
-%Facility shutdown \\
-%\hline
-%Job scheduling \\
-%\hline
-%Load migration \\
-%\hline
-%Re-scheduling back-ups \\
-%\hline
-%Fine grained power management \\
-%\hline
-%Temperature control beyond ASHRAE limits \\
-%\hline
-%Turn off lighting \\
-%\hline
-%Use back-up resources (e.g., generators) \\
-%\hline
-%\end{tabular}
-%\label{tab3}
-%\end{center}
-
-%\end{table}
