--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -78,7 +78,8 @@ Fname Lname, Affiliation
 \input{intro}
 \label{sec:intro}
 
-\section{Supercomputer Centers and\\ Electrical Grid Integration}
+\section{Electricity Service Providers\\
+ and HPC-Grid Integration}
 \input{supercomputercenters}
 \label{sec:supercomputer}
 
