--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -1,17 +1,40 @@
+The EE HPC WG Team took as their starting point a
+model developed by LBNL's Demand Response Research
+Center that describes strategies that data centers might em-
+ploy for utility programs to manage their electricity and
+power requirements to lower costs and benefit from utility
+incentives. The EE HPCWG Team adopted this model with
+slight tweaks to reflect the supercomputing environment
+focus (versus the data center as described by LBNL`s Demand
+Response Research Center).
 
+This paper distinguishes a supercomputer center as
+having unique characteristics that distinguish it from 
+a datacenter. As opposed to datacenters, supercomputer
+centers have very high system utilization and are not likely
+to use virtualization as a strategy. Also, supercomputer
+applications are generally not easily portable between
+geographic locations for a variety of reasons: security, data-
+locality, system tuning. Therefore, although included in the
+LBNL model for data centers, both virtualization and
+geographic load shifting were eliminated as potential supercom-
+puter center strategies.
 
-\subsection{Electricity Provider Programs and Methods}
-
+\subsection{Electricity Provider Programs\\
+and Methods}
+\label{sub:EPP}
 One key goal of the electricity provider is to provide efficient and reliable generation, transmission and 
 distribution of electricity. Methods and programs employed by the electricity providers and their consumers 
 are key to managing and balancing the supply and demand of electricity. While the methods describe how 
 electricity providers manage supply, the programs describe the activities that the electricity providers 
 can offer to their consumers to balance demand with supply.
 
-Methods are critical to the electricity providers, but are generally not visible to the consumer of the electricity.  
+Although critical to the eletricity service providers, \textit{methods} 
+are generally not visible to the consumer of the electricity because they
+operate within the generation  or transmission stations.
 These methods are the major means by which supply and demand of electricity are managed.
 
-Electricity provider programs encourage customer responses to target both energy efficiency and real-time
+Electricity provider \textit{programs} encourage customer responses to target both energy efficiency and real-time
 (day-ahead or day-of) management of demand for electricity. An example of an electricity provider program 
 that encourages energy efficiency would be to provide home consumers a financial incentive for replacing 
 single pane with double pane windows.  On the other hand, an example that illustrates programs that help 
@@ -20,8 +43,8 @@ with real-time demand management would be to provide a financial incentive for r
 
 The following is a list and brief definitions of key methods and programs.  
 
+\subsubsection{Methods}
 \begin{itemize}
-\item METHODS
 \item Regulation (Up or Down): Methods used to maintain that portion of electricity generation reserves 
 that are needed to balance generation and demand at all times.  Raising supply is up regulation and lowering 
 supply is down regulation. There are many types of reserves 
@@ -39,7 +62,10 @@ constant and reliable grid balancing service by timing their duty cycles in resp
 \item Grid Scale Storage:  Methods used to store electricity on a large scale. 
 Pumped-storage hydroelectricity is the largest-capacity form of grid energy storage. 
 \item Renewables:  Methods used to manage the variable uncertain generation nature of many renewable resources. 
-\item PROGRAMS
+\end{itemize}
+
+\subsubsection{Programs}
+\begin{itemize}
 \item Energy Efficiency:  Programs used to reduce overall electricity consumption.
 \item Peak Shedding:  Programs used to reduce load during peak times, 
 where the reduced load is not used at a later time. 
@@ -61,9 +87,10 @@ fluctuations in electricity demand, which, as discussed further in the questionn
 characteristic of the largest supercomputer centers.  
 \footnote {http://drrc.lbl.gov/sites/drrc.lbl.gov/files/LBNL-5958E.pdf}
 
-\subsection{Supercomputer Center Response Strategies}
+\subsection{Supercomputing Centers\\
+and HPC-Grid Integration}
 
-As described in section 2.1, electricity providers offer programs like peak shifting that may request 
+As described in Section~\ref{sub:EPP}, electricity providers offer programs like peak shifting that may request 
 a change in timing and/or magnitude of demand by supercomputing centers.  
 In response, supercomputing centers may employ one or more of a number of strategies to control their 
 electricity demand.
