Difference between DC and SC

--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -15,10 +15,12 @@ centers have very high system utilization and are not likely
 to use virtualization as a strategy. Also, supercomputer
 applications are generally not easily portable between
 geographic locations for a variety of reasons: security, data-
-locality, system tuning. Therefore, although included in the
-LBNL model for data centers, both virtualization and
-geographic load shifting were eliminated as potential supercom-
-puter center strategies.
+locality, system tuning.  Finally, supercomputing centers are 
+more energy efficient than the average data center.
+According to prior studies,
+the average data center has a power usage effectiveness (PUE)
+of between 1.91 and 2.9, whereas the highest PUE reported by the
+supercomputer center respondents in this study is 1.53.
 
 \subsection{Electricity Provider Programs\\
 and Methods}
