--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -215,6 +215,18 @@ Coarse grained power management &
 27 \\
 \hline
 
+Facility shutdown&
+36 &
+64 &
+10 \\
+\hline
+
+Job scheduling&
+36 &
+27 &
+18 \\
+\hline
+
 Load migration &
 10 &
 36 &
