--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -107,9 +107,6 @@ Fname Lname, Affiliation
 \bibliography{../bib/whitepaper,../bib/patki}  % eehpcmethod.bib is the name of the Bibliography in this case
 %
 
-\input{tableorg}
-\section{Appendices}
-\input{appendices}
-\label{sec:appendices}
+%\input{tableorg}
 
 \end{document}
