--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -6,12 +6,12 @@ are interested in partnering with customers, like supercomputer centers, to obta
 forecasts and engage in programs like demand response in order to create a more dynamic and resilient grid.
 
 We focused our attention on the largest supercomputing centers in the United States. The two supercomputing 
-centers with the largest electricity demand, ORNL and LLNL, have very different experiences.  ORNL’s 
+centers with the largest electricity demand, ORNL and LLNL, have very different experiences.  ORNL's 
 experience is that their electricity demand and fluctuations are not significant factors for their 
-electricity service provider.  LLNL’s experience is opposite of ORNL.  Because of the large swings in 
+electricity service provider.  LLNL's experience is opposite of ORNL.  Because of the large swings in 
 power usage, the LLNL supercomputing center was approached by their electricity service provider with a 
 request for daily predictable demand forecasts.   That initiated the development of an on-going relationship.  
-LANL’s supercomputing center’s experience is similar to that of LLNL. SDSC has an even tighter relationship 
+LANL's supercomputing center's experience is similar to that of LLNL. SDSC has an even tighter relationship 
 with their electricity service provider, but this relationship involves the entire campus and not just the 
 supercomputer center.  
 
@@ -38,7 +38,7 @@ electricity is expensive, varies dynamically or where there is strong reliance o
 generation (e.g., India).  We plan on conducting a similar survey in Europe, where electricity is more 
 expensive, to explore if there is a more compelling business case in other geographies.    
 
-This work’s focus was from the perspective of the supercomputer center.  It might yield different 
+This work's focus was from the perspective of the supercomputer center.  It might yield different 
 results if we were to hear from the ESPs about what makes a customer more or less interesting or 
 challenging with respect to grid integration.  How do they view supercomputer centers relative to their 
 spectrum of customers?  We plan on follow-up with the ESPs that support these US-based supercomputer 
@@ -46,7 +46,7 @@ centers to explore this question further.
 
 With increasing variable renewable generation and price-based DR programs, the intra-hour fluctuations 
 and demand forecasting is becoming increasingly important. Understanding the timescales of supercomputer 
-center’s load response will have different value to the electric grid programs. What are the trends 
+center's load response will have different value to the electric grid programs. What are the trends 
 in inter-hour fluctuation patterns?  Is this a new behavior, an interim one, or one that is likely to get worse?  
 
 
